Added new files for more separation of concern

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<meta name="description" content="Awesome build monitor"/>
 	<title>BuildMontior</title>
 	<link type="text/css" rel="stylesheet" href="./css/buildmonitor.css" />
-	<script src="./js/jquery-1.7.2.min.js"></script>
-	<script src="./js/jquery.fittext.js"></script>
-	<script src="./js/job.js"></script>
+	<script src="./js/lib/jquery-1.7.2.min.js"></script>
+	<script src="./js/lib/jquery.fittext.js"></script>
+	<script src="./js/Culprits.js"></script>
+	<script src="./js/VcsInfo.js"></script>
+	<script src="./js/Job.js"></script>
 	<script src="./js/buildmonitor.js"></script>
 </head>
 <body>
